--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.0",
     "babel-jest": "^29.2.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
