--- a/JS/package.json
+++ b/JS/package.json
@@ -18,13 +18,10 @@
   "bugs": {
     "url": "https://github.com/almajdalawi/training-gama-backend/issues"
   },
-  "homepage": "https://github.com/almajdalawi/training-gama-backend#readme",
+  "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/JS",
   "dependencies": {},
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/jest": "^29.2.0",
-    "@typescript-eslint/parser": "^5.40.1",
     "babel-jest": "^29.2.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
