--- a/TS/package.json
+++ b/TS/package.json
@@ -1,10 +1,10 @@
 {
   "name": "training-backend",
   "version": "1.0.0",
-  "type": "module",
   "description": "**Author:**  [Emad Almajdalawi](https://github.com/almajdalawi)",
   "main": "index.js",
   "scripts": {
+    "build": "tsc --outDir build",
     "test": "jest --verbose --coverage",
     "lint": "tsc --noEmit --incremental && eslint . --ext .ts,.tsx,.js,.jsx",
     "lint-and-fix": "yarn lint --fix"
@@ -21,14 +21,21 @@
   "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/TS",
   "dependencies": {},
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.5",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-jest": "^29.2.0",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "jest": "^29.2.1",
-    "jest-transform-stub": "^2.0.0"
+    "jest-transform-stub": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
+  },
+  "compilerOptions": {
+    "esModuleInterop": true
   }
 }
