--- a/TS/tsconfig.json
+++ b/TS/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "target": "ESNext",
         "allowJs": true,
         "checkJs": true,
         "skipLibCheck": true,
@@ -9,15 +9,17 @@
         "strict": true,
         "forceConsistentCasingInFileNames": true,
         "noFallthroughCasesInSwitch": true,
-        "module": "ES2020",
+        "module": "ESNext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        "isolatedModules": false,
         "noEmit": true,
         "baseUrl": "./",
         "typeRoots": [
             "node_modules/@types"
-        ]
+        ],
+        "rootDir": "./",
+        "outDir": "./build/"
     }
 }
 // {
