--- a/TS/package.json
+++ b/TS/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/TS",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
     "@typescript-eslint/parser": "^5.40.1",
