--- a/TS/package.json
+++ b/TS/package.json
@@ -4,7 +4,7 @@
   "description": "**Author:**  [Emad Almajdalawi](https://github.com/almajdalawi)",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --resolveJsonModule --outDir build",
+    "build": "tsc --resolveJsonModule  --outDir build",
     "test": "jest --verbose --coverage",
     "lint": "tsc --noEmit --incremental && eslint . --ext .ts,.tsx,.js,.jsx",
     "lint-and-fix": "yarn lint --fix"
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/TS",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
