--- a/TS/package.json
+++ b/TS/package.json
@@ -4,10 +4,11 @@
   "description": "**Author:**  [Emad Almajdalawi](https://github.com/almajdalawi)",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --resolveJsonModule  --outDir build",
+    "build": "tsc --resolveJsonModule --esModuleInterop --outDir build",
     "test": "jest --verbose --coverage",
     "lint": "tsc --noEmit --incremental && eslint . --ext .ts,.tsx,.js,.jsx",
-    "lint-and-fix": "yarn lint --fix"
+    "lint-and-fix": "lint --fix",
+    "start": "tsc --resolveJsonModule --esModuleInterop --outDir build server-express/app.ts &&  node build/server-express/app.js"
   },
   "repository": {
     "type": "git",
