--- a/TS/package.json
+++ b/TS/package.json
@@ -8,7 +8,7 @@
     "test": "jest --verbose --coverage",
     "lint": "tsc --noEmit --incremental && eslint . --ext .ts,.tsx,.js,.jsx",
     "lint-and-fix": "lint --fix",
-    "start": "tsc --resolveJsonModule --esModuleInterop --outDir build server-express/app.ts &&  node build/server-express/app.js"
+    "start": "tsc -t es5 --resolveJsonModule --esModuleInterop --outDir build server-express/app.ts &&  node build/server-express/app.js"
   },
   "repository": {
     "type": "git",
