Feat: model compleated. CRUD need fixing

--- a/TS/package.json
+++ b/TS/package.json
@@ -10,7 +10,7 @@
     "lint-and-fix": "lint --fix",
     "start-node": "tsc -t es5 --resolveJsonModule --esModuleInterop --outDir build server-nodeJs/app.ts &&  node build/server-nodeJs/app.js",
     "start-express": "tsc -t es5 --resolveJsonModule --esModuleInterop --outDir build server-express/app.ts &&  node build/server-express/app.js",
-    "start": "tsc -t es5 --resolveJsonModule --esModuleInterop --outDir build server-graphql/app.ts &&  node build/server-graphql/app.js"
+    "start": "tsc -t es5 --resolveJsonModule --esModuleInterop --outDir build server-graphql/app.ts &&  node --trace-warnings build/server-graphql/app.js"
   },
   "repository": {
     "type": "git",
