--- a/TS/package.json
+++ b/TS/package.json
@@ -24,13 +24,15 @@
   },
   "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/TS",
   "dependencies": {
+    "@types/pg": "^8.6.5",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "pg": "^8.8.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
