--- a/TS/package.json
+++ b/TS/package.json
@@ -24,7 +24,6 @@
   },
   "homepage": "https://github.com/almajdalawi/training-gama-backend#readme/TS",
   "dependencies": {
-    "@types/pg": "^8.6.5",
     "apollo-server-core": "^3.11.1",
     "apollo-server-express": "^3.11.1",
     "body-parser": "^1.20.1",
@@ -32,7 +31,8 @@
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "sequelize": "^6.25.5"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
@@ -41,6 +41,8 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.5",
+    "@types/pg": "^8.6.5",
+    "@types/sequelize": "^4.28.14",
     "@typescript-eslint/parser": "^5.40.1",
     "babel-jest": "^29.2.0",
     "eslint": "^7.32.0",
