--- a/TS/package.json
+++ b/TS/package.json
@@ -32,7 +32,8 @@
     "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
     "pg": "^8.8.0",
-    "sequelize": "^6.25.5"
+    "sequelize": "^6.25.5",
+    "umzug": "^3.2.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.19.6",
